--- a/reportMaster2/4-Eval.tex
+++ b/reportMaster2/4-Eval.tex
@@ -8,16 +8,24 @@
 Comparaisons d'expressivités (nombre de lignes, nombres de symboles, typage à la compilation), factorisation de code
 Reprendre slides : différents cas de tests
 
-Programme test fluide pour jeux \cite{Art15}
+Programme test fluide pour jeux \cite{Art15} ?
 
 
 \section{Performances quantitatives sur machines dédiées}
 
-Description du matériel
+\subsection{Description du matériel et des cas de tests}
+\label{sec:desc_mat_tests}
 
-Mesures de temps
+
+
++ Vérification des valeurs numériques
+
++ Parler des tuiles au sens vecteur d'éléments
+
+\subsection{Mesures de temps}
+
 (Pour hiérarchisation, \cite{Ths3,Ths4})
 
-Mesures de compteurs
 
-Vérification des valeurs numériques
+\subsection{Mesures de compteurs}
+
