--- a/reportMaster2/online.bib
+++ b/reportMaster2/online.bib
@@ -32,3 +32,10 @@
 	year={2013},
 	url={https://trilinos.org/oldsite/events/trilinos_user_group_2013/presentations/2013-11-TUG-Kokkos-Tutorial.pdf}
 }
+
+@online{Web6,
+	author={Munroe, Randall},
+	title={Hofstadter},
+	year={2014},
+	url={http://xkcd.com/917/}
+}
